Some alignment and spacing issues

--- a/Frontend/Pages/Authentication/style.css
+++ b/Frontend/Pages/Authentication/style.css
@@ -27,79 +27,84 @@ header {
   line-height: 53px;
 }
 header p {
-font-size: 16px;
-font-weight: 400;
-line-height: 19px;
-padding-bottom: 24px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  padding-bottom: 24px;
 }
 
-.field {
+/* .field {
   display: flex;
   flex-direction: column;
+} */
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.9375rem 1.25rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #e4e4e4;
+  background-clip: padding-box;
+  border: 1px solid #e4e4e4;
+  appearance: none;
+  border-radius: 0;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-
-
-
-
 label {
   font-size: 14px;
   font-weight: 400;
-  line-height: 17px;
+  line-height: 24px;
   color: #333333;
   padding-bottom: 8px;
+  margin-bottom: 18px;
 }
 
 form {
-  margin-top: 30;
+  margin-top: 30px;
   padding: 0 0 0 67.5px;
 }
 
 .form .field {
   position: relative;
-  height: 45px;
+  height: 100%;
   width: 100%;
   margin-top: 20px;
   border-radius: 4px;
 }
 
-.field input{
-    height: 100%;
-    width: 100%;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    font-weight: 400;
-    background-color: rgba(0, 63, 145, 0.1);
-}
-
-
-.field button{
+.field input {
   height: 100%;
   width: 100%;
   border: none;
   border-radius: 4px;
   font-size: 16px;
   font-weight: 400;
+  background-color: rgba(0, 63, 145, 0.1);
+  outline: none;
+    padding: 10px;
+}
+
+.field button {
+  height: 40px;
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 400;
   background-color: rgba(0, 63, 145, 1);
+  
 }
 
-.input{
-    font-size: 16px;
-   
+.input {
+  font-size: 16px;
 }
 
-.field input {
-    outline: none;
-  padding: 16px;
-  width: 400px;
-  height: 48px;
-}
-
-
-.field input:focus{
-    border-bottom-width: 2px;
-    border-radius: 4px;
-    border: 2px solid rgba(0, 63, 145, 1);
+.field input:focus {
+  border-bottom-width: 2px;
+  border-radius: 4px;
+  border: 2px solid rgba(0, 63, 145, 1);
 }
 
 .eye-icon {
@@ -113,15 +118,14 @@ form {
   padding: 5px;
 }
 
-.field button{
-    color: #fff;
-    background-color: rgba(0, 63, 145, 1);
+.field button {
+  color: #fff;
+  background-color: rgba(0, 63, 145, 1);
 }
-.field button:hover{
-    background-color: rgba(229, 244, 227, 1);
-    color:rgba(25, 24, 25, 1);
+.field button:hover {
+  background-color: rgba(229, 244, 227, 1);
+  color: rgba(25, 24, 25, 1);
 }
-
 .form-link {
   text-align: center;
   margin-top: 10px;
@@ -149,94 +153,92 @@ form {
   background-color: #dddddd;
 }
 
-.line::before{
-    content: 'or';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    color: #232836;
-    padding: 0 15px;
+.line::before {
+  content: "or";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  color: #232836;
+  padding: 0 15px;
 }
 
-.media-options a{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.media-options a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.media-options{
-    width: 400px;
-    height: 48px;
-    padding: 0 67.5px;
-    margin-top: 24px;
-
+.media-options {
+  width: 400px;
+  height: 48px;
+  padding: 0 67.5px;
+  margin-top: 24px;
 }
 
 a.field.facebook,
-a.field.google{
-    width: 400px;
-    height: 48px;
+a.field.google {
+  width: 400px;
+  height: 48px;
 }
 
-a.facebook{
-    color: #fff;
-    background-color: rgba(0, 63, 145, 1);
-  
+a.facebook {
+  color: #fff;
+  background-color: rgba(0, 63, 145, 1);
 }
 a.facebook .facebook-img {
-    height: 28px;
-    width: 28px;
-    color: rgba(0, 63, 145, 1);
-    font-size: 20px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* background-color: #fff; */
+  height: 28px;
+  width: 28px;
+  color: rgba(0, 63, 145, 1);
+  font-size: 20px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #fff; */
 }
 .facebook-img,
-img.google-img{
-    position: absolute;
-    top: 50%;
-    left: 60px;
-    transform: translateY(-50%);
+img.google-img {
+  position: absolute;
+  top: 50%;
+  left: 60px;
+  transform: translateY(-50%);
 }
 
-img.google-img{
-    height: 20px;
-    width: 20px;
-    object-fit: cover;
+img.google-img {
+  height: 20px;
+  width: 20px;
+  object-fit: cover;
 }
-a.google{
-background-color: rgba(0, 63, 145, 1);
+a.google {
+  background-color: rgba(0, 63, 145, 1);
 }
-a.google span{
-    font-weight: 500;
+a.google span {
+  font-weight: 500;
 
-    color: white;
+  color: white;
 }
 
 .t-c {
-    font-size: 16px;
-    display: flex;
-justify-content: center;
-padding: 0 0 0 73.05px;
-padding-top: 24px;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  padding: 0 0 0 73.05px;
+  padding-top: 24px;
 }
 .remfor {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 8px;
-    font-size: 16px;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 8px;
+  font-size: 16px;
+  align-items: center;
 }
-.remfor label{
-    padding-left: 6px;
-    align-items: center;
+.remfor label {
+  padding-left: 6px;
+  align-items: center;
 }
-.email-img{
+.email-img {
   width: 365px;
   height: 351.88px;
   align-items: center;
